# tron-ai

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  LICENSE.md  Makefile  README.md  alembic.ini  mcp_servers.json  output.json  page_source.xml  pyproject.toml  pytest.ini  tron_history.db
.cursor/rules/: 000-core-performance.mdc  000-core-standards.mdc  000-core.mdc
.docker/: tron-compose.yml
.docker/mcp/: DockerFile  docker-compose.yml
chroma/: chroma.sqlite3
docs/: agents.md  api.md  architecture.md  cli-guide.md  development.md  index.md
tests/: README.md  conftest.py  test_async_process_monitor.py  test_connection_pooling.py  test_file_manager_async.py  test_json_performance.py  test_llm_client_performance.py  test_task_manager_performance.py
tests/executors/: __init__.py  test_base.py  test_chain.py  test_completion.py  test_integration.py
tests/modules/: test_tasks.py
tests/tools/: test_file_manager.py  test_file_manager_async.py  test_file_manager_simple.py
tests/utils/: test_connection_manager.py  test_llm_client.py
tron_ai/: __init__.py  cli.py  cli_old.py  client_secret_487115951073-h6fn2voj96eaukne7h88hllh8ffjhpu9.apps.googleusercontent.com.json  config.py  constants.py  exceptions.py  pyproject.toml  test_gmail.py
tron_ai/agents/: tron.py
tron_ai/cli/: __init__.py  agent_factory.py  base.py  main.py
tron_ai/database/: __init__.py  config.py  manager.py  models.py
tron_ai/executors/: agent.py  base.py  chain.py  completion.py
tron_ai/flows/: _base.py  blog_post_create.py  wordpress_generate_post.py
tron_ai/models/: __init__.py  agent.py  config.py  executors.py  prompts.py
tron_ai/processors/: __init__.py
tron_ai/prompts/: __init__.py  loader.py
tron_ai/utils/: LLMClient.py  __init__.py  decorators.py  file_manager.py  graph.py  memory.py
tron_intelligence/: __init__.py  cli.py  config.py  graph.py
tron_intelligence/executors/: base.py  chain.py  completion.py
tron_intelligence/models/: __init__.py  config.py
tron_intelligence/processors/: __init__.py  processor.py
tron_intelligence/prompts/: __init__.py  (+1 more)
tron_memory.db/: chroma.sqlite3
(+210 files in other folders)
