[project]
name = "tron-ai"
version = "0.1.0"
description = "AI agent framework with specialized agents for business, devops, and productivity tasks, featuring multi-agent orchestration via swarm executor."
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "Nicholas Young", email = "ynickd@gmail.com"}]
license = {text = "MIT"}
dependencies = [
    "adalflow>=0.2.6",
    "click>=8.1.8",
    "jinja2>=3.1.5",
    "openai>=1.59.7",
    "polyfactory>=2.18.1",
    "rich-click>=1.8.5",
    "rich>=13.9.4",
    "typing-extensions>=4.12.2",
    "markitdown>=0.0.1a3",
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
    "astroid>=3.3.8",
    "black>=25.1.0",
    "isort>=6.0.0",
    "orjson>=3.10.15",
    "aiohttp>=3.11.12",
    "chromadb>=0.6.3",
    "pytest>=8.3.4",
    "mcp[cli]>=1.9.0",
    "pydantic>=2.11.4",
    "psutil>=7.0.0",
    "a2a-sdk>=0.2.5",
    "sentence-transformers>=4.1.0",
    "asyncclick>=8.1.8",
    "mem0ai>=0.1.113",
    "mcp-server-fetch>=2025.1.17",
    "google-api-python-client>=2.175.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "paramiko>=3.5.1",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "pydantic-ai-slim[openai]>=0.2.16",
    "pyinstrument>=5.0.3",
    "notion-client>=2.4.0",
    "python-dotenv>=1.0.0",
    "tree-sitter>=0.24.0",
    "tree-sitter-python>=0.23.6",
    "networkx>=3.5",
    "neo4j>=5.28.1",
]

[project.scripts]
tron = "tron_ai.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["tron_ai"]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.5",
    "pytest-rich>=0.1.1",
    "pytest-mock>=3.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pygame>=2.6.1",
    "pytest-asyncio>=0.25.2",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.10",
]
